[project]
name = "flat-files-loader"
version = "0.1.0"
description = "Load SPX EOD flat files into marketDB"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
]

[project.scripts]
load-flat-files = "flat_files_loader.load:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flat_files_loader"]
